Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36015

UBSAN: runtime error: -1 is outside the range of representable values of type 'unsigned long' on INSERT ... SELECT

    XMLWordPrintable

Details

    Description

      A few similar, now closed, possibly related, issues here.

      --source include/have_innodb.inc
      CREATE TABLE t (c DOUBLE AUTO_INCREMENT KEY) ENGINE=InnoDB;
      INSERT INTO t VALUES (2);
      INSERT INTO t SELECT -1 FROM t;
      

      Leads to:

      CS 11.8.0 cacaaebf01939d387645fb850ceeec5392496171 (Debug, UBASAN, Clang)

      /test/11.8_dbg_san/storage/innobase/include/row0row.inl:207:36: runtime error: -1 is outside the range of representable values of type 'unsigned long'
          #0 0x5605bdeb3001 in row_parse_int(unsigned char const*, unsigned long, unsigned long, bool) /test/11.8_dbg_san/storage/innobase/include/row0row.inl:207:36
          #1 0x5605bde98092 in row_ins_clust_index_entry_low(unsigned long, btr_latch_mode, dict_index_t*, unsigned long, dtuple_t*, unsigned long, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:2665:17
          #2 0x5605bdea373d in row_ins_clust_index_entry(dict_index_t*, dtuple_t*, que_thr_t*, unsigned long) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3280:8
          #3 0x5605bdea7e9f in row_ins_index_entry(dict_index_t*, dtuple_t*, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3415:10
          #4 0x5605bdea7e9f in row_ins_index_entry_step(ins_node_t*, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3581:8
          #5 0x5605bdea7e9f in row_ins(ins_node_t*, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3698:28
          #6 0x5605bdea7e9f in row_ins_step(que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3827:8
          #7 0x5605bdefaee3 in row_insert_for_mysql(unsigned char const*, row_prebuilt_t*, ins_mode_t) /test/11.8_dbg_san/storage/innobase/row/row0mysql.cc:1287:2
          #8 0x5605bdb1869c in ha_innobase::write_row(unsigned char const*) /test/11.8_dbg_san/storage/innobase/handler/ha_innodb.cc:7797:10
          #9 0x5605bcd07ff1 in handler::ha_write_row(unsigned char const*) /test/11.8_dbg_san/sql/handler.cc:8188:3
          #10 0x5605bbce3325 in write_record(THD*, TABLE*, st_copy_info*, select_result*) /test/11.8_dbg_san/sql/sql_insert.cc:2312:12
          #11 0x5605bbd080fd in select_insert::send_data(List<Item>&) /test/11.8_dbg_san/sql/sql_insert.cc:4303:10
          #12 0x5605bc004bb6 in end_send(JOIN*, st_join_table*, bool) /test/11.8_dbg_san/sql/sql_select.cc:25440:9
          #13 0x5605bc0bc9bf in evaluate_join_record(JOIN*, st_join_table*, int) /test/11.8_dbg_san/sql/sql_select.cc:24342:11
          #14 0x5605bc0ba367 in AGGR_OP::end_send() /test/11.8_dbg_san/sql/sql_select.cc:33292:11
          #15 0x5605bc008b68 in sub_select_postjoin_aggr(JOIN*, st_join_table*, bool) /test/11.8_dbg_san/sql/sql_select.cc:23787:15
          #16 0x5605bbf8ebec in sub_select(JOIN*, st_join_table*, bool) /test/11.8_dbg_san/sql/sql_select.cc:24042:7
          #17 0x5605bc01f8a3 in do_select(JOIN*, Procedure*) /test/11.8_dbg_san/sql/sql_select.cc:23622:14
          #18 0x5605bc01c0f1 in JOIN::exec_inner() /test/11.8_dbg_san/sql/sql_select.cc:5040:50
          #19 0x5605bc019a12 in JOIN::exec() /test/11.8_dbg_san/sql/sql_select.cc:4823:8
          #20 0x5605bbf93634 in mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) /test/11.8_dbg_san/sql/sql_select.cc:5356:21
          #21 0x5605bbf91f12 in handle_select(THD*, LEX*, select_result*, unsigned long long) /test/11.8_dbg_san/sql/sql_select.cc:633:10
          #22 0x5605bbe5d79f in mysql_execute_command(THD*, bool) /test/11.8_dbg_san/sql/sql_parse.cc:4677:16
          #23 0x5605bbe22588 in mysql_parse(THD*, char*, unsigned int, Parser_state*) /test/11.8_dbg_san/sql/sql_parse.cc:7915:18
          #24 0x5605bbe1664b in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /test/11.8_dbg_san/sql/sql_parse.cc:1903:7
          #25 0x5605bbe24fad in do_command(THD*, bool) /test/11.8_dbg_san/sql/sql_parse.cc:1416:17
          #26 0x5605bc4e876c in do_handle_one_connection(CONNECT*, bool) /test/11.8_dbg_san/sql/sql_connect.cc:1415:11
          #27 0x5605bc4e8027 in handle_one_connection /test/11.8_dbg_san/sql/sql_connect.cc:1327:5
          #28 0x5605bb827b5c in asan_thread_start(void*) asan_interceptors.cpp.o
          #29 0x15268949ca93 in start_thread nptl/pthread_create.c:447:8
          #30 0x152689529c3b in clone3 misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
       
      SUMMARY: UndefinedBehaviorSanitizer: float-cast-overflow /test/11.8_dbg_san/storage/innobase/include/row0row.inl:207:36 
      

      CS 11.8.0 cacaaebf01939d387645fb850ceeec5392496171 (Optimized, UBASAN, Clang)

      /test/11.8_dbg_san/storage/innobase/include/row0row.inl:207:36: runtime error: -1 is outside the range of representable values of type 'unsigned long'
          #0 0x5565caed1001 in row_parse_int(unsigned char const*, unsigned long, unsigned long, bool) /test/11.8_dbg_san/storage/innobase/include/row0row.inl:207:36
          #1 0x5565caeb6092 in row_ins_clust_index_entry_low(unsigned long, btr_latch_mode, dict_index_t*, unsigned long, dtuple_t*, unsigned long, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:2665:17
          #2 0x5565caec173d in row_ins_clust_index_entry(dict_index_t*, dtuple_t*, que_thr_t*, unsigned long) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3280:8
          #3 0x5565caec5e9f in row_ins_index_entry(dict_index_t*, dtuple_t*, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3415:10
          #4 0x5565caec5e9f in row_ins_index_entry_step(ins_node_t*, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3581:8
          #5 0x5565caec5e9f in row_ins(ins_node_t*, que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3698:28
          #6 0x5565caec5e9f in row_ins_step(que_thr_t*) /test/11.8_dbg_san/storage/innobase/row/row0ins.cc:3827:8
          #7 0x5565caf18ee3 in row_insert_for_mysql(unsigned char const*, row_prebuilt_t*, ins_mode_t) /test/11.8_dbg_san/storage/innobase/row/row0mysql.cc:1287:2
          #8 0x5565cab3669c in ha_innobase::write_row(unsigned char const*) /test/11.8_dbg_san/storage/innobase/handler/ha_innodb.cc:7797:10
          #9 0x5565c9d25ff1 in handler::ha_write_row(unsigned char const*) /test/11.8_dbg_san/sql/handler.cc:8188:3
          #10 0x5565c8d01325 in write_record(THD*, TABLE*, st_copy_info*, select_result*) /test/11.8_dbg_san/sql/sql_insert.cc:2312:12
          #11 0x5565c8d260fd in select_insert::send_data(List<Item>&) /test/11.8_dbg_san/sql/sql_insert.cc:4303:10
          #12 0x5565c9022bb6 in end_send(JOIN*, st_join_table*, bool) /test/11.8_dbg_san/sql/sql_select.cc:25440:9
          #13 0x5565c90da9bf in evaluate_join_record(JOIN*, st_join_table*, int) /test/11.8_dbg_san/sql/sql_select.cc:24342:11
          #14 0x5565c90d8367 in AGGR_OP::end_send() /test/11.8_dbg_san/sql/sql_select.cc:33292:11
          #15 0x5565c9026b68 in sub_select_postjoin_aggr(JOIN*, st_join_table*, bool) /test/11.8_dbg_san/sql/sql_select.cc:23787:15
          #16 0x5565c8facbec in sub_select(JOIN*, st_join_table*, bool) /test/11.8_dbg_san/sql/sql_select.cc:24042:7
          #17 0x5565c903d8a3 in do_select(JOIN*, Procedure*) /test/11.8_dbg_san/sql/sql_select.cc:23622:14
          #18 0x5565c903a0f1 in JOIN::exec_inner() /test/11.8_dbg_san/sql/sql_select.cc:5040:50
          #19 0x5565c9037a12 in JOIN::exec() /test/11.8_dbg_san/sql/sql_select.cc:4823:8
          #20 0x5565c8fb1634 in mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) /test/11.8_dbg_san/sql/sql_select.cc:5356:21
          #21 0x5565c8faff12 in handle_select(THD*, LEX*, select_result*, unsigned long long) /test/11.8_dbg_san/sql/sql_select.cc:633:10
          #22 0x5565c8e7b79f in mysql_execute_command(THD*, bool) /test/11.8_dbg_san/sql/sql_parse.cc:4677:16
          #23 0x5565c8e40588 in mysql_parse(THD*, char*, unsigned int, Parser_state*) /test/11.8_dbg_san/sql/sql_parse.cc:7915:18
          #24 0x5565c8e3464b in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /test/11.8_dbg_san/sql/sql_parse.cc:1903:7
          #25 0x5565c8e42fad in do_command(THD*, bool) /test/11.8_dbg_san/sql/sql_parse.cc:1416:17
          #26 0x5565c950676c in do_handle_one_connection(CONNECT*, bool) /test/11.8_dbg_san/sql/sql_connect.cc:1415:11
          #27 0x5565c9506027 in handle_one_connection /test/11.8_dbg_san/sql/sql_connect.cc:1327:5
          #28 0x5565c8845b5c in asan_thread_start(void*) asan_interceptors.cpp.o
          #29 0x14d32809ca93 in start_thread nptl/pthread_create.c:447:8
          #30 0x14d328129c3b in clone3 misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
       
      SUMMARY: UndefinedBehaviorSanitizer: float-cast-overflow /test/11.8_dbg_san/storage/innobase/include/row0row.inl:207:36 
      

      Setup:

      Compiled with a recent version of Clang (I used Clang 18.1.3) with LLVM 18. Ubuntu instructions:
           # Note: llvm-17-linker-tools installs /usr/lib/llvm-17/lib/LLVMgold.so, which is needed for compilation, and LLVMgold.so is no longer included in LLVM 18
           sudo apt install clang llvm-18 llvm-18-linker-tools llvm-18-runtime llvm-18-tools llvm-18-dev libstdc++-14-dev llvm-dev llvm-17-linker-tools
           sudo ln -s /usr/lib/llvm-17/lib/LLVMgold.so /usr/lib/llvm-18/lib/LLVMgold.so
      Compiled with: "-DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DCMAKE_C{,XX}_FLAGS='-march=native -mtune=native'" and:
          -DWITH_ASAN=ON -DWITH_ASAN_SCOPE=ON -DWITH_UBSAN=ON -DWSREP_LIB_WITH_ASAN=ON
      Set before execution:
          export UBSAN_OPTIONS=print_stacktrace=1:report_error_type=1   # And you may also want to supress UBSAN startup issues using 'suppressions=UBSAN.filter' in UBSAN_OPTIONS. For an example of UBSAN.filter, which includes current startup issues see: https://github.com/mariadb-corporation/mariadb-qa/blob/master/UBSAN.filter
          export ASAN_OPTIONS=quarantine_size_mb=512:atexit=0:detect_invalid_pointer_pairs=3:dump_instruction_bytes=1:abort_on_error=1:allocator_may_return_null=1
      

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.5.28 (dbg), 10.5.28 (opt), 10.6.21 (dbg), 10.6.21 (opt), 10.11.11 (dbg), 10.11.11 (opt), 11.4.5 (dbg), 11.4.5 (opt), 11.7.2 (dbg), 11.7.2 (opt), 11.8.0 (dbg), 11.8.0 (opt)

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1.25h
                  1d 1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.